# AndroidMic

./: .gitignore  LanzadorMicApp.bat  README.md  check_devices.py  check_devices.spec  main.py  pyproject.toml
AndroidMicApp/: App.js  README.md  app.json  index.js  package-lock.json  package.json  pnpm-lock.yaml
AndroidMicApp/android/: settings.gradle
AndroidMicApp/android/app/: build.gradle
AndroidMicApp/android/app/src/main/: AndroidManifest.xml
AndroidMicApp/android/app/src/main/java/com/androidmicapp/: MainActivity.kt  MainApplication.kt  MyTaskService.java
AndroidMicApp/android/app/src/main/res/values/: strings.xml
AndroidMicApp/components/: AudioStreamModule.js  BackgroundActions.js  StatusIndicator.js  VolumeSlider.js
AndroidMicApp/ios/: Podfile
AndroidMicApp/ios/AndroidMicApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
AndroidMicApp/ios/AndroidMicApp.xcodeproj/: project.pbxproj
AndroidMicApp/ios/AndroidMicApp.xcodeproj/xcshareddata/xcschemes/: AndroidMicApp.xcscheme
AndroidMicApp/scripts/: buildAndroid.js
