[project]
name = "androidmic"
version = "0.1.0"
description = "A way to use your phone as a microphone, lightweight, open source and self hosted."
readme = "README.md"
requires-python = ">=3.11,<=3.14.2"
dependencies = [
    "numpy>=2.4.2",
    "pyinstaller>=6.19.0",
    "sounddevice>=0.5.5",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.19.0",
]
